--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 
-title: Karna
-desctiption: Karna is a responsive jekyll theme which includes pinterest like pins.
-url: http://webjeda.com/
+title: foibles
+desctiption: work documentation for foibles
+url: http://foibles.github.io
 permalink: ':title/'
 
 markdown: kramdown
-baseurl: "/karna"
+# baseurl: "/"
 
 
 sass:
